--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,11 @@ body {
 }
 
 header h1 {
-
+  background-color: #471D8E;
+  color: #FFF;
+  margin-top: 0;
+  padding: 2%;
+  text-align: center;
 }
 
 .greeting {
